<resources>
    <string name="app_name">GoLocal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">GoLocal</string>
    <string name="nav_header_subtitle">Anonymat</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_profil">Profil</string>
    <string name="menu_home">Accueil</string>
    <string name="menu_historique">Historique</string>
    <string name="menu_notification">Notification</string>
    <string name="menu_about">A Propos</string>

    <string name="home_second">Home Second</string>
    <string name="title_activity_maps">Map</string>

    <string name="next">SUIVANT</string>
    <string name="skip">PASSER</string>
    <string name="start">LANCER</string>

    <string name="slide_1_title">Désormais, </string>
    <string name="slide_1_desc">Signalez désormais plus facilement les problèmes de votre localité à la mairie!</string>

    <string name="slide_2_title">Et amenez</string>
    <string name="slide_2_desc">la mairie à résoudre ces problèmes !</string>

    <string name="slide_3_title">Avec GoLocale</string>
    <string name="slide_3_desc">Rendons ensembles nos communes plus naviguables!</string>

    <string name="problem_title">Problem Title Problem TitleProblem TitleProblem TitleProblem TitleProblem TitleProblem Title</string>
    <string name="default_status">Non résolu</string>
    <string name="datetime">dd / MMM / YYYY, hh:mm</string>

    <string name="new_submit">Nouvelle soumission</string>

    <string name="linkProject">https://cité.bj</string>


</resources>
