<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_accueil"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_account_circle_black_24dp"
            android:title="@string/menu_profil" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_history_black_24dp"
            android:title="@string/menu_historique" />
        <!--<item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_notifications_active_black_24dp"
            android:title="@string/menu_notification" />-->
    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_info_black_24dp"
            android:title="@string/menu_about" />
    </group>
</menu>
